--- a/ProyectoTiendas/src/main/java/GUIAdmin/ventasVentas.form
+++ b/ProyectoTiendas/src/main/java/GUIAdmin/ventasVentas.form
@@ -18,32 +18,32 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
+              <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="jLabel2" min="-2" pref="420" max="-2" attributes="0"/>
                       <EmptySpace min="50" pref="50" max="-2" attributes="0"/>
                       <Component id="jLabel5" min="-2" pref="420" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
-                      <Component id="jTextField2" min="-2" pref="420" max="-2" attributes="0"/>
+                      <Component id="textNombre" min="-2" pref="420" max="-2" attributes="0"/>
                       <EmptySpace min="50" pref="50" max="-2" attributes="0"/>
-                      <Component id="jTextField3" min="-2" pref="420" max="-2" attributes="0"/>
+                      <Component id="textDireccion" min="-2" pref="420" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
                       <Component id="jLabel3" min="-2" pref="740" max="-2" attributes="0"/>
-                      <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
-                      <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
+                      <Component id="jLabel6" max="32767" attributes="0"/>
                   </Group>
                   <Component id="jLabel7" min="-2" pref="490" max="-2" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jComboBox3" min="-2" pref="670" max="-2" attributes="0"/>
-                          <Component id="jTextField5" min="-2" pref="670" max="-2" attributes="0"/>
+                          <Component id="comboProductos" min="-2" pref="670" max="-2" attributes="0"/>
+                          <Component id="textProductos" min="-2" pref="670" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
-                      <Component id="jButton2" min="-2" pref="100" max="-2" attributes="0"/>
+                      <Component id="buttonAgregar" min="-2" pref="100" max="-2" attributes="0"/>
                       <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
-                      <Component id="jButton1" min="-2" pref="100" max="-2" attributes="0"/>
+                      <Component id="buttonEliminar" min="-2" pref="100" max="-2" attributes="0"/>
                   </Group>
                   <Component id="jScrollPane6" min="-2" pref="890" max="-2" attributes="0"/>
               </Group>
@@ -60,13 +60,13 @@
                       </Group>
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jTextField1" min="-2" pref="420" max="-2" attributes="0"/>
-                              <Component id="jComboBox1" min="-2" pref="420" max="-2" attributes="0"/>
+                              <Component id="textNIT" min="-2" pref="420" max="-2" attributes="0"/>
+                              <Component id="comboClientes" min="-2" pref="420" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="50" pref="50" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jComboBox2" min="-2" pref="420" max="-2" attributes="0"/>
-                              <Component id="jTextField4" min="-2" pref="420" max="-2" attributes="0"/>
+                              <Component id="comboEmpleados" min="-2" pref="420" max="-2" attributes="0"/>
+                              <Component id="textEmpleado" min="-2" pref="420" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" attributes="0">
@@ -90,8 +90,8 @@
               </Group>
               <EmptySpace min="1" pref="1" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jTextField2" min="-2" pref="26" max="-2" attributes="0"/>
-                  <Component id="jTextField3" min="-2" pref="26" max="-2" attributes="0"/>
+                  <Component id="textNombre" min="-2" pref="26" max="-2" attributes="0"/>
+                  <Component id="textDireccion" min="-2" pref="26" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
@@ -99,11 +99,11 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="20" pref="20" max="-2" attributes="0"/>
-                      <Component id="jComboBox3" min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="comboProductos" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="jTextField5" min="-2" pref="26" max="-2" attributes="0"/>
-                  <Component id="jButton2" min="-2" max="-2" attributes="0"/>
-                  <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                  <Component id="textProductos" min="-2" pref="26" max="-2" attributes="0"/>
+                  <Component id="buttonAgregar" min="-2" max="-2" attributes="0"/>
+                  <Component id="buttonEliminar" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
               <Component id="jScrollPane6" min="-2" pref="260" max="-2" attributes="0"/>
@@ -123,13 +123,13 @@
                   </Group>
                   <EmptySpace min="1" pref="1" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jTextField1" min="-2" pref="26" max="-2" attributes="0"/>
-                      <Component id="jTextField4" min="-2" pref="26" max="-2" attributes="0"/>
+                      <Component id="textNIT" min="-2" pref="26" max="-2" attributes="0"/>
+                      <Component id="textEmpleado" min="-2" pref="26" max="-2" attributes="0"/>
                       <Group type="102" attributes="0">
                           <EmptySpace min="20" pref="20" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jComboBox1" min="-2" pref="30" max="-2" attributes="0"/>
-                              <Component id="jComboBox2" min="-2" pref="30" max="-2" attributes="0"/>
+                              <Component id="comboClientes" min="-2" pref="30" max="-2" attributes="0"/>
+                              <Component id="comboEmpleados" min="-2" pref="30" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -153,21 +153,22 @@
         <Property name="text" type="java.lang.String" value="NIT: "/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField1">
+    <Component class="javax.swing.JTextField" name="textNIT">
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="textNITKeyTyped"/>
+      </Events>
     </Component>
-    <Component class="javax.swing.JComboBox" name="jComboBox1">
+    <Component class="javax.swing.JComboBox" name="comboClientes">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="1810714-1 MARCOS ANDRES AGUARE BRAVO"/>
-            <StringItem index="1" value="1810714-1 JAIRO DANIEL GONZ&#xc1;LEZ BRAVO"/>
-            <StringItem index="2" value="1810714-1 ANGEL DANIEL JUAREZ BRAVO"/>
-            <StringItem index="3" value="0000000-0 NOMBRE DE PRUEBA DE CLIENTE"/>
-          </StringArray>
+          <StringArray count="0"/>
         </Property>
         <Property name="enabled" type="boolean" value="false"/>
         <Property name="focusCycleRoot" type="boolean" value="true"/>
       </Properties>
+      <Events>
+        <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="comboClientesItemStateChanged"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
@@ -180,22 +181,20 @@
         <Property name="text" type="java.lang.String" value="EMPLEADO:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField4">
+    <Component class="javax.swing.JTextField" name="textEmpleado">
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="textEmpleadoKeyTyped"/>
+      </Events>
     </Component>
-    <Component class="javax.swing.JComboBox" name="jComboBox2">
+    <Component class="javax.swing.JComboBox" name="comboEmpleados">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="1810714-1 MARCOS ANDRES AGUARE BRAVO"/>
-            <StringItem index="1" value="1810714-1 JAIRO DANIEL GONZ&#xc1;LEZ BRAVO"/>
-            <StringItem index="2" value="1810714-1 ANGEL DANIEL JUAREZ BRAVO"/>
-            <StringItem index="3" value="0000000-0 NOMBRE DE PRUEBA DE CLIENTE"/>
-          </StringArray>
+          <StringArray count="0"/>
         </Property>
         <Property name="focusCycleRoot" type="boolean" value="true"/>
       </Properties>
       <Events>
-        <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="jComboBox2ItemStateChanged"/>
+        <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="comboEmpleadosItemStateChanged"/>
       </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
@@ -209,7 +208,7 @@
         <Property name="text" type="java.lang.String" value="NOMBRE:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField2">
+    <Component class="javax.swing.JTextField" name="textNombre">
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel5">
       <Properties>
@@ -219,7 +218,7 @@
         <Property name="text" type="java.lang.String" value="DIRECCI&#xd3;N:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField3">
+    <Component class="javax.swing.JTextField" name="textDireccion">
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel7">
       <Properties>
@@ -229,17 +228,15 @@
         <Property name="text" type="java.lang.String" value="SELECCI&#xd3;N DE PRODUCTOS:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField5">
+    <Component class="javax.swing.JTextField" name="textProductos">
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="textProductosKeyTyped"/>
+      </Events>
     </Component>
-    <Component class="javax.swing.JComboBox" name="jComboBox3">
+    <Component class="javax.swing.JComboBox" name="comboProductos">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="1810714-1 MARCOS ANDRES AGUARE BRAVO"/>
-            <StringItem index="1" value="1810714-1 JAIRO DANIEL GONZ&#xc1;LEZ BRAVO"/>
-            <StringItem index="2" value="1810714-1 ANGEL DANIEL JUAREZ BRAVO"/>
-            <StringItem index="3" value="0000000-0 NOMBRE DE PRUEBA DE CLIENTE"/>
-          </StringArray>
+          <StringArray count="0"/>
         </Property>
         <Property name="focusCycleRoot" type="boolean" value="true"/>
       </Properties>
@@ -247,12 +244,15 @@
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton2">
+    <Component class="javax.swing.JButton" name="buttonAgregar">
       <Properties>
         <Property name="text" type="java.lang.String" value="AGREGAR"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonAgregarActionPerformed"/>
+      </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="buttonEliminar">
       <Properties>
         <Property name="text" type="java.lang.String" value="ELIMINAR"/>
       </Properties>
@@ -274,8 +274,8 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="0" green="cc" red="0" type="rgb"/>
         </Property>
-        <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="Q.999,999.99"/>
+        <Property name="horizontalAlignment" type="int" value="4"/>
+        <Property name="text" type="java.lang.String" value="Q.000.00"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="jButton3">
@@ -404,7 +404,7 @@
                   <Editor/>
                   <Renderer/>
                 </Column>
-                <Column maxWidth="-1" minWidth="100" prefWidth="100" resizable="true">
+                <Column maxWidth="-1" minWidth="103" prefWidth="103" resizable="true">
                   <Title/>
                   <Editor/>
                   <Renderer/>
